--- a/l6.ipynb
+++ b/l6.ipynb
@@ -1022,6 +1022,16 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# generar una imagen de ejemplo\n",
+    "generate_and_save_images(generator, 1, noise_dim)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
