--- a/l6.ipynb
+++ b/l6.ipynb
@@ -77,6 +77,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Carga del conjunto de datos"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
@@ -283,7 +290,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Recorte, Redimensionamiento y Normalización de imágenes\n",
+    "#### Preprocesamiento: Recorte, Redimensionamiento y Normalización de imágenes\n",
     "\n",
     "Respuesta : \n",
     "Dado que tienes las coordenadas del cuadro delimitador para cada imagen, puedes usar estas para recortar las caras de las imágenes. Esto ayudará a la GAN a enfocarse únicamente en las características faciales, mejorando la calidad de la generación."
@@ -541,6 +548,13 @@
     "IMG_SHAPE = (64, 64, 3)  # Target shape for images\n",
     "NUM_IMAGES = 10000  # Number of images to load\n",
     "BATCH_SIZE = 32  # Batch size for training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Diseño del generador y discriminador"
    ]
   },
   {
@@ -855,6 +869,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Funciones de pérdida y optimizadores"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 16,
    "metadata": {},
@@ -864,6 +885,13 @@
     "cross_entropy = tf.keras.losses.BinaryCrossentropy(from_logits=True) \n",
     "generator_optimizer = tf.keras.optimizers.Adam(1e-4)\n",
     "discriminator_optimizer = tf.keras.optimizers.Adam(1e-4)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Iteración de entrenamiento"
    ]
   },
   {
@@ -937,77 +965,76 @@
     "import matplotlib.pyplot as plt\n",
     "import time\n",
     "\n",
-    "# Lists to store generator and discriminator losses\n",
+    "# Listas para almacenar las pérdidas del generador y el discriminador\n",
     "gen_loss = []\n",
     "disc_loss = []\n",
     "\n",
-    "# Dimensionality of the noise vector (latent space)\n",
+    "# Número de dimensiones del ruido\n",
     "noise_dim = 100\n",
     "\n",
-    "# Training step function\n",
+    "# Función de entrenamiento\n",
     "@tf.function\n",
     "def train_step(real_images):\n",
     "    \"\"\"Performs a single training step for both the generator and discriminator.\"\"\"\n",
-    "    noise = tf.random.normal([BATCH_SIZE, noise_dim])  # Generate random noise for the generator\n",
+    "    noise = tf.random.normal([BATCH_SIZE, noise_dim])  # Generar ruido aleatorio\n",
     "    with tf.GradientTape() as gen_tape, tf.GradientTape() as disc_tape:\n",
-    "        generated_images = generator(noise, training=True)  # Generate images from the noise\n",
-    "        real_output = discriminator(real_images, training=True)  # Get discriminator output for real images\n",
-    "        fake_output = discriminator(generated_images, training=True)  # Get discriminator output for fake images\n",
+    "        generated_images = generator(noise, training=True)  # Generar imágenes falsas\n",
+    "        real_output = discriminator(real_images, training=True)  # Obtener la salida del discriminador para las imágenes reales\n",
+    "        fake_output = discriminator(generated_images, training=True)  # Obtener la salida del discriminador para las imágenes falsas\n",
     "\n",
-    "        # Calculate generator loss\n",
+    "        # Calcular la pérdida del generador\n",
     "        gen_loss = cross_entropy(tf.ones_like(fake_output), fake_output)\n",
-    "        # Calculate discriminator loss\n",
+    "        # Calcular la pérdida del discriminador\n",
     "        disc_loss = cross_entropy(tf.ones_like(real_output), real_output) + cross_entropy(tf.zeros_like(fake_output), fake_output)\n",
     "\n",
-    "    # Compute gradients for the generator\n",
+    "    # Calcular los gradientes para el generador\n",
     "    gradients_of_generator = gen_tape.gradient(gen_loss, generator.trainable_variables)\n",
-    "    # Compute gradients for the discriminator\n",
+    "    # Calcular los gradientes para el discriminador\n",
     "    gradients_of_discriminator = disc_tape.gradient(disc_loss, discriminator.trainable_variables)\n",
     "\n",
-    "    # Apply the gradients to the generator\n",
+    "    # Aplicar los gradientes al generador\n",
     "    generator_optimizer.apply_gradients(zip(gradients_of_generator, generator.trainable_variables))\n",
-    "    # Apply the gradients to the discriminator\n",
+    "    # Aplicar los gradientes al discriminador\n",
     "    discriminator_optimizer.apply_gradients(zip(gradients_of_discriminator, discriminator.trainable_variables))\n",
     "\n",
-    "    return gen_loss, disc_loss  # Return the generator and discriminator losses\n",
+    "    return gen_loss, disc_loss\n",
     "\n",
     "def generate_and_save_images(model, epoch, noise_dim):\n",
     "    \"\"\"Generates and saves images from the generator model.\"\"\"\n",
-    "    noise = tf.random.normal([16, noise_dim])  # Generate random noise\n",
-    "    predictions = model(noise, training=False)  # Generate images from the noise\n",
+    "    noise = tf.random.normal([16, noise_dim])  # Generar ruido aleatorio\n",
+    "    predictions = model(noise, training=False)  # Generar imágenes falsas\n",
     "    \n",
-    "    fig = plt.figure(figsize=(4, 4))  # Create a figure to display the images\n",
+    "    fig = plt.figure(figsize=(4, 4))  # Crear una figura de tamaño 4x4\n",
     "\n",
     "    for i in range(predictions.shape[0]):\n",
-    "        plt.subplot(4, 4, i + 1)  # Add a subplot for each generated image\n",
-    "        plt.imshow((predictions[i] * 127.5 + 127.5).numpy().astype('uint8'))  # Rescale the image values to [0, 255]\n",
-    "        plt.axis('off')  # Turn off the axis\n",
+    "        plt.subplot(4, 4, i + 1)  # Seleccionar la posición del subplot\n",
+    "        plt.imshow((predictions[i] * 127.5 + 127.5).numpy().astype('uint8'))\n",
+    "        plt.axis('off')\n",
     "\n",
-    "    plt.show()  # Display the images\n",
+    "    plt.show()  # Mostrar la figura\n",
     "\n",
     "def train(dataset, epochs):\n",
     "    \"\"\"Trains the GAN for a specified number of epochs.\"\"\"\n",
     "    for epoch in range(epochs):\n",
-    "        start = time.time()  # Record the start time of the epoch\n",
+    "        start = time.time()  # Almacenar el tiempo de inicio\n",
     "\n",
     "        for image_batch in dataset:\n",
-    "            gen_loss_value, disc_loss_value = train_step(image_batch)  # Perform a training step\n",
-    "            gen_loss.append(gen_loss_value.numpy())  # Append generator loss to the list\n",
-    "            disc_loss.append(disc_loss_value.numpy())  # Append discriminator loss to the list\n",
+    "            gen_loss_value, disc_loss_value = train_step(image_batch)  # Hacer un paso de entrenamiento\n",
+    "            gen_loss.append(gen_loss_value.numpy())  # Añadir la pérdida del generador a la lista\n",
+    "            disc_loss.append(disc_loss_value.numpy())  # Añadir la pérdida del discriminador a la lista\n",
     "\n",
-    "        # Print the losses and time taken for the epoch\n",
-    "        print('-' * 50)  # Separator line\n",
+    "        print('-' * 50)  # Separator\n",
     "        print(f'Epoch {epoch + 1}, Generator Loss: {gen_loss_value}, Discriminator Loss: {disc_loss_value}')\n",
     "        print(f'Time for epoch {epoch + 1} is {time.time() - start} sec')\n",
-    "                # Generate and save images every 5 epochs\n",
+    "                # Generar y guardar imagenes cada 2 epocas\n",
     "        if (epoch + 1) % 2 == 0:\n",
     "            generate_and_save_images(generator, epoch + 1, noise_dim)\n",
     "\n",
     "with tf.device('/gpu:0'):\n",
-    "    # Create a TensorFlow dataset from the images, shuffle, and batch them\n",
+    "    # Crear un dataset de TensorFlow a partir de las imágenes de entrenamiento\n",
     "    train_dataset = tf.data.Dataset.from_tensor_slices(X_train_images).shuffle(60000).batch(BATCH_SIZE)\n",
     "\n",
-    "    # Train the GAN for a specified number of epochs\n",
+    "    # Entrenar el GAN\n",
     "    train(train_dataset, epochs=5)"
    ]
   },
@@ -1019,6 +1046,13 @@
    "source": [
     "generator.save('./models/generator.keras')\n",
     "discriminator.save('./models/discriminator.keras')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Visualización adecuada de los resultados"
    ]
   },
   {
@@ -1038,7 +1072,6 @@
     }
    ],
    "source": [
-    "# generar una imagen de ejemplo\n",
     "generate_and_save_images(generator, 1, noise_dim)"
    ]
   },
@@ -1047,6 +1080,28 @@
    "metadata": {},
    "source": [
     "### Reflexión sobre el uso de un modelo de IAGen y el laboratorio (5 puntos)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### 1. ¿Qué conceptos de la teoría encontraron más desafiantes y por qué?\n",
+    "Creemos que uno de los conceptos más desafiantes fue la interacción entre el generador y el discriminador. Ya que en la teoría parece simple, el hecho de que el generador busque engañar al discriminador con una estrategia MINIMAX. El equilibrio entre ambos modelos es crucial para el éxito de la GAN ya que si uno de los dos modelos es muy fuerte, el otro no podrá aprender y la GAN no generará resultados satisfactorios.\n",
+    "\n",
+    "##### 2. ¿Cómo les ayudó el laboratorio a consolidar o entender mejor estos conceptos?\n",
+    "El laboratorio nos ayudó a consolidar estos conceptos ya que al implementar la GAN pudimos ver en la práctica cómo se comportan el generador y el discriminador. Además, al ver los resultados de la GAN pudimos entender cómo el equilibrio entre ambos modelos es necesario para el éxito de la GAN.\n",
+    "\n",
+    "##### 3. ¿Qué aplicaciones potenciales ven para las GANs en la industria o en la investigación?\n",
+    "Consideramos que las aplicaciones potenciales de las GANs son muy amplias, ya que pueden ser utilizadas en la generación de imágenes, videos, música, texto, entre otros. En cuanto a la investigación, las aplicaciones que vemos para las GANs es que pueden ser utilizadas en la generación de datos sintéticos para entrenar modelos de Machine Learning y en la generación de imágenes médicas.\n",
+    "\n",
+    "##### 4. ¿Qué limitaciones o preocupaciones éticas pueden identificar en el uso de GANs?\n",
+    "Una de las limitaciones que podemos encontrar de las GANs es que pueden generar imágenes falsas que sean difíciles de distinguir de las reales, lo que puede ser utilizado para crear noticias falsas o engañar a las personas. \n",
+    "\n",
+    "En cuanto a las preocupaciones éticas, las GANs pueden ser utilizadas para crear imágenes falsas de personas, lo que puede ser utilizado para el acoso, la extorsión, entre otros. De hecho, ya existen casos de deepfakes que han sido utilizados para crear videos falsos de personas famosas, mas que todo en tiktok y youtube.\n",
+    "\n",
+    "##### 5. ¿Cómo se sienten con respecto a la implementación y entrenamiento de GANs después de la experiencia práctica?\n",
+    "Al principio nos parecía un reto difícil, pero al ver los resultados generados y cómo se podía mejorar el modelo, nos sentimos más seguros en la implementación y entrenamiento de GANs. Creemos que con más práctica y experiencia podremos mejorar nuestros modelos y generar resultados más satisfactorios."
    ]
   }
  ],
